# ai-pal

./: .dockerignore  .env.example  .gitignore  ANALYSIS_SUMMARY.md  API_DOCUMENTATION.md  API_FILE_STRUCTURE.md  API_QUICK_REFERENCE.md  API_README.md  BACKGROUND_JOBS_SYSTEM.md  CLOUD_SETUP_GUIDE.md  COLLABORATION_CHECKLIST.md  DASHBOARD_ANALYSIS.md  DASHBOARD_API_INTEGRATION.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_INTEGRATION_INDEX.md  DEPLOYMENT_GUIDE.md  DETAILED_FINDINGS.md  Dockerfile  Dockerfile.api  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Install_AI_Pal_App.ps1  Install_AI_Pal_App.sh  LICENSE  LOCAL_FIRST_ARCHITECTURE.md  PATCH_REQUEST_SYSTEM.md  PHASE1_COMPLETE.md  PHASE6_2_COMPLETE.md  PRIORITY2_COMPLETE.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  TEAM_SETUP_GUIDE.md  TESTING.md  alembic.ini  bootstrap_installer.py  docker-compose.yml  easy_windows_install.md  pyproject.toml  (+2 more)
dashboard/: API_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  README-NEW.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop_app/: IMPROVEMENTS.md  app.py
docs/: ADVANCED_ARI_FFE_INTEGRATION.md  AI_POWERED_FFE_STATUS.md  ARI_RDI_SYSTEM_ARCHITECTURE.md  CACHE_TESTING_MONITORING.md  PHASE1_INTEGRATION_PLAN.md  PHASE4_COMPLETION_REPORT.md  PHASE5_FFE_ARCHITECTURE.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE6_EXPANSION_PLAN.md  POSTGRESQL_MIGRATION.md  PRIORITY3_COMPLETION.md  REDIS_CACHING.md  REMAINING_TODO_FULL_AC_AI.md  SESSION_2025-10-24_SUMMARY.md  SOCRATIC_FEATURES.md
examples/: basic_usage.py  echo_chamber_buster_example.py  learning_module_example.py
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  03-storage.yaml  10-postgres.yaml  11-redis.yaml  20-api-service.yaml  21-celery-workers.yaml  22-flower.yaml  30-ingress.yaml  dashboard-deployment.yaml  dashboard-ingress.yaml
kubernetes/: README.md  app-deployment.yaml  app-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-service.yaml  postgres-statefulset.yaml  pvc.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml
scripts/: benchmark_cache.py  load_test_cache.py  postgres_migration.py
src/: dashboard_integration.py
tests/: conftest.py  quick_smoke_test.py  test_ai_powered_ffe.py  test_ari_tasks.py  test_background_jobs_api.py  test_cached_repositories.py  test_curiosity_compass.py  test_e2e_validation.py  test_edm_tasks.py  test_ffe_e2e.py  test_ffe_tasks.py  (+9 more)
(+200 files in other folders)
